Make a grid of cards, improve aesthetics

--- a/src/app.html
+++ b/src/app.html
@@ -2,15 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Settle Game</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,700;1,6..12,400;1,6..12,700&display=swap" rel="stylesheet">
 
 		<style>
 			body {
 				margin: 0;
 				padding: 2rem;
 				background-color: #f0f0f0;
+				font-family: 'Nunito Sans', sans-serif;
 			}
 		</style>
 	</head>
