--- a/src/app.html
+++ b/src/app.html
@@ -8,14 +8,14 @@
 		%sveltekit.head%
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,700;1,6..12,400;1,6..12,700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 
 		<style>
 			body {
 				margin: 0;
 				padding: 2rem;
 				background-color: #f0f0f0;
-				font-family: 'Nunito Sans', sans-serif;
+				font-family: 'Rubik', sans-serif;
 			}
 		</style>
 	</head>
