--- a/src/app.html
+++ b/src/app.html
@@ -13,8 +13,7 @@
 		<style>
 			body {
 				margin: 0;
-				padding: 2rem;
-				background-color: #f0f0f0;
+				padding: 0;
 				font-family: 'Rubik', sans-serif;
 			}
 		</style>
