--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,7 @@
 				margin: 0;
 				padding: 0;
 				font-family: 'Rubik', sans-serif;
+				background-color: #4e4b46;
 			}
 		</style>
 	</head>
