--- a/src/app.html
+++ b/src/app.html
@@ -6,9 +6,18 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet"> -->
+		
+		<!-- Opengraph tags, using %sveltekit.assets%/settle-og.jpg -->
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Settle" />
+		<meta property="og:description" content="A card game" />
+		<meta property="og:url" content="https://settle.pages.dev" />
+		<meta property="og:site_name" content="Settle" />
+		<meta property="og:image" content="%sveltekit.assets%/settle-og.jpg">
+		<meta property="og:image:secure_url" content="%sveltekit.assets%/settle-og.jpg" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
 
 		<style>
 			:root {
