Added Twitter card

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 		
-		<!-- Opengraph tags, using %sveltekit.assets%/settle-og.jpg -->
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Settle" />
@@ -18,6 +17,10 @@
 		<meta property="og:image:secure_url" content="%sveltekit.assets%/settle-og.jpg" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
+
+		<meta name="twitter:description" content="A card game" />
+		<meta name="twitter:title" content="Settle" />
+		<meta name="twitter:image" content="%sveltekit.assets%/settle-og.jpg" />
 
 		<style>
 			:root {
