--- a/src/app.html
+++ b/src/app.html
@@ -6,14 +6,14 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-		
+
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Settle" />
 		<meta property="og:description" content="A card game" />
 		<meta property="og:url" content="https://settle.pages.dev" />
 		<meta property="og:site_name" content="Settle" />
-		<meta property="og:image" content="%sveltekit.assets%/settle-og.jpg">
+		<meta property="og:image" content="%sveltekit.assets%/settle-og.jpg" />
 		<meta property="og:image:secure_url" content="%sveltekit.assets%/settle-og.jpg" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
@@ -24,7 +24,8 @@
 
 		<style>
 			:root {
-				--system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+				--system-ui: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+					'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 			}
 
 			body {
