--- a/src/app.html
+++ b/src/app.html
@@ -38,5 +38,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "efbdd25422284e6894b615ff7a905e69"}'></script><!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
