--- a/src/app.html
+++ b/src/app.html
@@ -38,6 +38,7 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<div class="copyright"></div>
 		<!-- Cloudflare Web Analytics -->
 		<script
 			defer
